# pico-tmag5170

./: .gitignore  README.md
example/continuous_measuring/: CMakeLists.txt  main.cpp
example/measure_and_python/: CMakeLists.txt  main.cpp  python_client.py
src/: TMAG5170.cpp  TMAG5170.hpp
tool/: CRC_shift.c
